<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_PIZZA" Id="{c3bd4980-10fb-41d4-a440-58646530c8f9}">
    <Declaration><![CDATA[TYPE ST_PIZZA :
STRUCT
	bExist : BOOL;
	dtTimeEnteredOven : DATE_AND_TIME;
	dtTimeExitedOven : DATE_AND_TIME;
	tTimeInOven : TIME;
	eType : E_PIZZA_TYPES; // 0 = Cheese, 1 = Pep, 2 = sausage
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>