<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="HMI_VARS" Id="{15fd23c2-3235-4673-b77e-e3e929f0cb33}">
    <Declaration><![CDATA[VAR_GLOBAL

	iState : DINT; // My machine state.
	bStartButton : BOOL;
	
	arrPizzaHistory : ARRAY [0..100] OF ST_PIZZA;
	
	fbNT_GetTime : GETSYSTEMTIME;
	stCurrentTime : T_FILETIME;
	dtCurrentTime : DATE_AND_TIME;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>